# RoboChess

./: CMakeLists.txt  README.md
gui/: a.out  backend.cpp  board_state.json  createBoard.js  index.html
gui/css/: style.css
src/: fen_parser.cpp  fen_parser.h  gui.cpp  main.cpp  states.cpp  states.h
